authService/manifest/new/auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: microservices

spec:
  replicas: 2  # Adjust as needed
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
      - name: auth-service
        image: auth-service:1.1.2
        imagePullPolicy: Never
        ports:
        - containerPort: 5001
        # Add environment variables or volume mounts as needed to connect to databases or RabbitMQ
      # Consider adding resource requests and limits for CPU and memory
